# GeoPro

./: .gitignore  pyproject.toml  readme.md  requirements.txt
desktop/: geopro-gmaps.desktop  geopro-osm.desktop
geopro/: config.py  core.py  log.py  logging.py
geopro/apps/: base.py  gmaps.py  osm.py
geopro/functions/: gmaps_scraping.py  osm_fitting.py  places_feature_matching.py
geopro/ui/: widgets.py
resources/: bookmark_icons.yaml
scripts/: convert_bookmarks_to_yaml.py  test_place_features.py
